--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "format": "prettier --write .",
-    "lint": "prettier --check --write . && eslint .",
+    "lint": "prettier --check --write .",
+    "eslint": "prettier --check --write . && eslint .",
     "prisma:seed": "tsx prisma/seed.ts",
     "prepare": "husky",
     "release": "standard-version",
