--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "singleQuote": true,
   "trailingComma": "none",
   "printWidth": 100,
+  "bracketSpacing": true,
   "plugins": ["prettier-plugin-svelte"],
   "overrides": [
     {
