--- a/package.json
+++ b/package.json
@@ -51,10 +51,17 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "flowbite-svelte": "^0.47.3",
+    "pocketbase": "^0.21.5",
+    "svelte-calendar": "^3.1.6",
+    "svelte-chartjs": "^3.1.5",
     "svelte-i18n": "^4.0.1"
   },
   "packageManager": "pnpm@9.13.2+sha512.88c9c3864450350e65a33587ab801acf946d7c814ed1134da4a924f6df5a2120fd36b46aab68f7cd1d413149112d53c7db3a4136624cfd00ff1846a0c6cef48a"
