feat(users): add user management for the admin

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
